# Ml-env-doctor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  IMPROVEMENTS_ROADMAP.md  LICENSE  README.md  line.csv  line.json  mkdocs.yml  pyproject.toml  requirements-docs.txt  results.html  results.json
.github/ISSUE_TEMPLATE/: environment-triage.yml
.github/workflows/: ci.yml  docs.yml  mlenvdoctor-user-ci-template.yml  pages.yml
docker/: README.md
docs/: CASE_STUDY_TEMPLATE.md  FAILURE_TAXONOMY.md  KILLER_PRODUCT_PLAN.md  PHASED_EXECUTION_PLAN.md  PROJECT_OVERVIEW.md  changelog.md  checks.md  contributing.md  dependency-maintenance.md  faq.md  getting-started.md  index.md  installation.md  mlenvdoctor-future-plan.md  next-version-plan.md  quickstart.md  troubleshooting.md  usage.md
docs/api/: index.md
docs/assets/: site.webmanifest
docs/assets/javascripts/: structured-data.js
docs/guides/: diagnose-and-doctor.md  dockerize.md  fix-workflow.md  mcp.md  reports-and-exports.md
docs/reference/: cli.md  json-schema.md  mismatch-codes.md
mlenvdoctor-report/: diagnostic-report-20260409-095606.html  diagnostic-report-20260409-095606.json
overrides/: main.html
overrides/assets/stylesheets/main/: custom.css
scripts/: build_docs.py  test_cli_improvements.py
src/mlenvdoctor/: __init__.py  api.py  cli.py  config.py  constants.py  diagnose.py  dockerize.py  exceptions.py  export.py  fix.py  gpu.py  icons.py  logger.py  mcp.py  parallel.py  retry.py  utils.py  validators.py
tests/: __init__.py  test_cli.py  test_diagnose.py  test_dockerize.py  test_fix.py  test_utils.py  test_validators.py
